--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "fsevents": "^2.3.2"
   },
   "devDependencies": {
+    "gh-pages": "^5.0.0",
     "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
     "prettier": "2.2.1",
